Updated CSS file: 1. Tidied up our CSS code as we felt that it was a bit over complicated and not clean enough. 2. Gave the music-list-container a width and deleted the align-items and justify-content which allows the cards to be centerd to the page using the margin that they are given in the card section. 3. On the music-card-container removed the display flex etc and width/height so the card can be determined by it's content only. Set the margin to be equal on each side of the card so the cards will be aligned both on the top and bottom when they will be in a row on the tablet and desktop media queries. 4. Deleted the album-name-container as we resolved the issue of the album name text going out of the card. As we fixed this by not having the flex-box properties on the card. 5. Updated the music-list-container and music-card according to the changes that we had made in the mobile view.

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,6 +16,7 @@ main {
 
 header {
   border-bottom: 1px solid #383838;
+  margin: 20px 40px;
 }
 
 header h1 {
@@ -25,22 +26,17 @@ header h1 {
 
 /* Music list section that contains the music-card-container */
 .music-list-container {
+  width: 90%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   margin: auto;
 }
 
+
 /* Music card */
 .music-card-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   background-color: #000;
-  margin: 10px 0px;
-  width: 300px;
-  height: 400px;
+  margin: 20px;
 }
 
 /* Music image container which contains the album image and icons*/
@@ -96,12 +92,6 @@ header h1 {
   filter: brightness(0.30); 
 }
 
-/* Album name & artist name*/
-
-.album-name-container {
-  width: 300px;
-}
-
 a {
   text-decoration: none;
 }
@@ -125,21 +115,23 @@ a {
 }
 
 @media (min-width: 768px) {
+  
   .music-list-container {
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
+    justify-content: center;
+    margin: auto;
   }
 
   .music-card-container {
-    margin: 10px;
-    width: 35%;
+    width: 40%;
   }
 }
 
 @media (min-width: 1024px) {
+
   .music-card-container {
-    max-width: 22%;
+    width: 20%;
   }
 }
 
